--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
     <string name="title_converter">Money Currency Converter</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title">Title</string>
+    <string name="message">Message</string>
+    <string name="open_detail">Open Detail</string>
+    <string name="notification_title">Target Dompet Tercapai!</string>
+    <string name="notification_message">Tareget Dompet Sudah Mencapai yang diharapkan! Kerja Bagus!</string>
+    <string name="detail_title">LKP TAM</string>
+    <string name="detail_message">Praktikum 27 oktober 2021</string>
+    <string name="activity_detail">Notifikasi</string>
 </resources>
